--- a/start.html
+++ b/start.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1> This File is not index.html file</h1>
+    <div>
+        <h3>New blogs</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque sint consequuntur natus debitis, assumenda obcaecati odio totam corrupti nostrum, sequi odit et sed voluptatem distinctio magni id ex quae animi architecto dicta? Debitis quibusdam quis quia mollitia nulla, repellendus earum!</p>
+    </div>
     <img src="reza.jpg" alt="">
 </body>
 </html>
